--- a/Partiticipants/iit2024114/name.ipynb
+++ b/Partiticipants/iit2024114/name.ipynb
@@ -1,2 +1,23 @@
-# Kamakshi Gupta 
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kamakshi Gupta\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
